[package]
name = "hello-world-cargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
reqwest = "0.11.16"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"


tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
